Convert all images to WebP format for better performance

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       "@context": "https://schema.org",
       "@type": "HomeAndConstructionBusiness",
       "name": "AV Window Tinting",
-      "image": "https://avwindowtinting.com/images/service-residential.png",
+      "image": "https://avwindowtinting.com/images/service-residential.webp",
       "description": "Professional window tinting services including residential, commercial, and automotive tinting in the Antelope Valley. Serving Palmdale, Lancaster, and surrounding areas.",
       "telephone": "(661) 555-TINT",
       "url": "https://avwindowtinting.com",
@@ -130,7 +130,7 @@
 
                 <!-- Residential Tinting -->
                 <a href="/services/residential/" class="av-explore-card">
-                    <img src="/images/service-residential.png" alt="Residential Window Tinting Palmdale">
+                    <img src="/images/service-residential.webp" alt="Residential Window Tinting Palmdale">
                     <div class="av-explore-overlay">
                         <h3>Residential Tinting</h3>
                         <p>Reduce energy costs, increase privacy, and protect your home from harmful UV rays.</p>
@@ -140,7 +140,7 @@
 
                 <!-- Commercial Tinting -->
                 <a href="/services/commercial/" class="av-explore-card">
-                    <img src="/images/service-commercial.png" alt="Commercial Window Tinting Lancaster">
+                    <img src="/images/service-commercial.webp" alt="Commercial Window Tinting Lancaster">
                     <div class="av-explore-overlay">
                         <h3>Commercial Tinting</h3>
                         <p>Professional window films for offices, retail spaces, and commercial buildings.</p>
@@ -150,7 +150,7 @@
 
                 <!-- Automotive Tinting -->
                 <a href="/services/automotive/" class="av-explore-card">
-                    <img src="/images/service-automotive.png" alt="Automotive Window Tinting Antelope Valley">
+                    <img src="/images/service-automotive.webp" alt="Automotive Window Tinting Antelope Valley">
                     <div class="av-explore-overlay">
                         <h3>Automotive Tinting</h3>
                         <p>Premium window tinting for cars, trucks, and SUVs with lifetime warranty.</p>
@@ -160,7 +160,7 @@
 
                 <!-- Security Film -->
                 <a href="/services/security-film/" class="av-explore-card">
-                    <img src="/images/service-security.png" alt="Security Window Film Palmdale">
+                    <img src="/images/service-security.webp" alt="Security Window Film Palmdale">
                     <div class="av-explore-overlay">
                         <h3>Security Film</h3>
                         <p>Shatter-resistant films that protect against break-ins and accidents.</p>
@@ -170,7 +170,7 @@
 
                 <!-- Decorative Film -->
                 <a href="/services/decorative/" class="av-explore-card">
-                    <img src="/images/service-decorative.png" alt="Decorative Window Film Lancaster">
+                    <img src="/images/service-decorative.webp" alt="Decorative Window Film Lancaster">
                     <div class="av-explore-overlay">
                         <h3>Decorative Film</h3>
                         <p>Frosted, etched, and custom designs for privacy and aesthetic appeal.</p>
@@ -180,7 +180,7 @@
 
                 <!-- Heat Rejection Film -->
                 <a href="/services/heat-rejection/" class="av-explore-card">
-                    <img src="/images/service-heat.png" alt="Heat Rejection Film Quartz Hill">
+                    <img src="/images/service-heat.webp" alt="Heat Rejection Film Quartz Hill">
                     <div class="av-explore-overlay">
                         <h3>Heat Rejection Film</h3>
                         <p>Advanced ceramic films that block up to 80% of solar heat without reducing visibility.
@@ -207,7 +207,7 @@
         <div class="av-palmdale-tech-grid">
             <!-- IMAGE -->
             <div class="av-palmdale-tech-photo">
-                <img src="/images/brian-uniform.png" alt="Brian, owner of AV Window Tinting">
+                <img src="/images/brian-uniform.webp" alt="Brian, owner of AV Window Tinting">
             </div>
 
             <!-- TEXT -->
@@ -257,10 +257,10 @@
             <div class="av-yard-ba-frame">
                 <div class="av-yard-ba-slider">
                     <!-- BEFORE -->
-                    <img src="/images/before.png" alt="Window before tinting" class="av-yard-before">
+                    <img src="/images/before.webp" alt="Window before tinting" class="av-yard-before">
 
                     <!-- AFTER -->
-                    <img src="/images/after.png" alt="Window after professional tinting by AV Window Tinting"
+                    <img src="/images/after.webp" alt="Window after professional tinting by AV Window Tinting"
                         class="av-yard-after">
 
                     <input type="range" min="0" max="100" value="50" class="av-yard-range">
