Update HTML to use bg-blue-tint instead of bg-green-tint

--- a/index-tree-template.html
+++ b/index-tree-template.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- 3. Services Preview (Luxury Grid) -->
-    <section class="av-explore-section" id="services" style="background: var(--bg-green-tint);">
+    <section class="av-explore-section" id="services" style="background: var(--bg-blue-tint);">
         <div class="av-explore-inner">
             <div class="section-title">
                 <h2>Professional Tree Services</h2>
@@ -468,7 +468,7 @@
     </section>
 
     <!-- 9. FAQ -->
-    <section class="avyard-faq" style="background: var(--bg-green-tint);">
+    <section class="avyard-faq" style="background: var(--bg-blue-tint);">
         <div class="avyard-faq-inner">
             <h2>Tree Services: FAQ</h2>
             <p class="avyard-faq-lead">
