--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </section>
 
     <!-- 3. Services Preview (Luxury Grid) -->
-    <section class="av-explore-section" id="services" style="background: var(--bg-green-tint);">
+    <section class="av-explore-section" id="services" style="background: var(--bg-blue-tint);">
         <div class="av-explore-inner">
             <div class="section-title">
                 <h2>Professional Window Tinting Services</h2>
@@ -471,7 +471,7 @@
     </section>
 
     <!-- 9. FAQ -->
-    <section class="avyard-faq" style="background: var(--bg-green-tint);">
+    <section class="avyard-faq" style="background: var(--bg-blue-tint);">
         <div class="avyard-faq-inner">
             <h2>Window Tinting: FAQ</h2>
             <p class="avyard-faq-lead">
