--- a/locations/rosamond/index.html
+++ b/locations/rosamond/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <!-- 3. Services in Rosamond -->
-    <section class="av-explore-section" style="background: var(--bg-green-tint);">
+    <section class="av-explore-section" style="background: var(--bg-blue-tint);">
         <div class="av-explore-inner">
             <div class="section-title">
                 <h2>Complete Tree Care for Rosamond Homes</h2>
