--- a/locations/lancaster/index.html
+++ b/locations/lancaster/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <!-- 3. Services in Lancaster -->
-    <section class="av-explore-section" style="background: var(--bg-green-tint);">
+    <section class="av-explore-section" style="background: var(--bg-blue-tint);">
         <div class="av-explore-inner">
             <div class="section-title">
                 <h2>Complete Tree Care for Lancaster Homes</h2>
