--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <a href="/" class="logo">AV Tree <span>Pros</span></a>
+            <a href="/" class="logo">AV Window <span>Tinting</span></a>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/">Home</a></li>
@@ -57,7 +57,7 @@
                 </ul>
             </nav>
             <div class="header-actions">
-                <a href="tel:6614984444" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 498-4444</a>
+                <a href="tel:6615558468" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 555-TINT</a>
                 <a href="/contact/" class="btn btn-primary">Get a Quote</a>
                 <button class="mobile-menu-btn" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             </div>
@@ -265,18 +265,18 @@
 
             <!-- Brand -->
             <div class="aw-footer-brand">
-                <h3>AV Tree <span>Pros</span></h3>
-                <p>Your trusted local tree service partner in the Antelope Valley.</p>
+                <h3>AV Window <span>Tinting</span></h3>
+                <p>Your trusted local window tinting partner in the Antelope Valley.</p>
             </div>
 
             <!-- Contact -->
             <div class="aw-footer-contact">
                 <p class="aw-footer-phone">
                     <span>📞</span>
-                    <a href="tel:6614984444">(661) 498-4444</a>
+                    <a href="tel:6615558468">(661) 555-TINT</a>
                 </p>
                 <p class="aw-footer-email">
-                    Professional tree services for Palmdale, Lancaster & the High Desert
+                    Professional window tinting for Palmdale, Lancaster & the High Desert
                 </p>
             </div>
 
@@ -284,12 +284,12 @@
             <div class="aw-footer-services">
                 <h4>Our Services</h4>
                 <ul>
-                    <li><a href="/services/tree-care/">Professional Tree Care</a></li>
-                    <li><a href="/services/emergency-service/">Emergency Tree Services</a></li>
-                    <li><a href="/services/palm-trimming/">Palm Tree Trimming</a></li>
-                    <li><a href="/services/stump-grinding/">Stump Grinding</a></li>
-                    <li><a href="/services/tree-trimming/">Tree Trimming</a></li>
-                    <li><a href="/services/tree-removal/">Tree Removal</a></li>
+                    <li><a href="/services/residential/">Residential Tinting</a></li>
+                    <li><a href="/services/commercial/">Commercial Tinting</a></li>
+                    <li><a href="/services/automotive/">Automotive Tinting</a></li>
+                    <li><a href="/services/security-film/">Security Film</a></li>
+                    <li><a href="/services/decorative/">Decorative Film</a></li>
+                    <li><a href="/services/heat-rejection/">Heat Rejection Film</a></li>
                 </ul>
             </div>
 
@@ -310,7 +310,8 @@
 
         <!-- Bottom Bar -->
         <div class="aw-footer-bottom">
-            <p>© <span id="year"></span> AV Tree Pros. All rights reserved. | Serving the Antelope Valley with pride.
+            <p>© <span id="year"></span> AV Window Tinting. All rights reserved. | Serving the Antelope Valley with
+                pride.
             </p>
         </div>
     </footer>
