Complete site-wide branding update: AV Tree Pros → AV Window Tinting across all pages

--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About AV Tree Pros | Expert Tree Care in Antelope Valley</title>
+    <title>About AV Window Tinting | Expert Tree Care in Antelope Valley</title>
     <meta name="description"
-        content="AV Tree Pros provides trusted tree services in Lancaster, Palmdale, and Quartz Hill. Specialized in tree removal, trimming, stump grinding, and palm skinning.">
+        content="AV Window Tinting provides trusted window tinting in Lancaster, Palmdale, and Quartz Hill. Specialized in tree removal, trimming, stump grinding, and palm skinning.">
 
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -15,8 +15,8 @@
       "@type": "AboutPage",
       "mainEntity": {
         "@type": "ProfessionalService",
-        "name": "AV Tree Pros",
-        "description": "Premium tree services specializing in high-desert arboriculture.",
+        "name": "AV Window Tinting",
+        "description": "Premium window tinting specializing in high-desert arboriculture.",
         "areaServed": [
             { "@type": "City", "name": "Lancaster" },
             { "@type": "City", "name": "Palmdale" },
@@ -117,7 +117,7 @@
                     <span class="team-role">The Founder's Story</span>
                     <h3>Rooted in Reliability</h3>
                     <p style="margin-bottom: 20px; font-size: 1.1rem; line-height: 1.8;">
-                        AV Tree Pros began with a clear mission: to provide the Antelope Valley with a tree service that
+                        AV Window Tinting began with a clear mission: to provide the Antelope Valley with a tree service that
                         prioritizes safety, professionalism, and tree health. We saw too many properties damaged by
                         amateur work and decided to set a higher standard.
                     </p>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="team-image-wrapper">
-                    <img src="/images/brian-uniform.png" alt="Brian Smith - Founder of AV Tree Pros" class="team-img">
+                    <img src="/images/brian-uniform.png" alt="Brian Smith - Founder of AV Window Tinting" class="team-img">
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
     <section class="process-section">
         <div class="container">
             <div class="section-title">
-                <h2>The AV Tree Pros Process</h2>
+                <h2>The AV Window Tinting Process</h2>
                 <p style="margin-top: 10px; color: var(--text-light);">Professional execution from start to finish.</p>
             </div>
 
