--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - AV Tree Pros</title>
+    <title>Contact Us - AV Window Tinting</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
 
                     <div style="margin-bottom: 15px;">
                         <i class="fas fa-phone-alt" style="color: var(--primary-green); margin-right: 10px;"></i>
-                        <strong style="font-size: 1.2rem;">(661) 498-4444</strong>
+                        <strong style="font-size: 1.2rem;">(661) 555-TINT</strong>
                     </div>
                     <div style="margin-bottom: 15px;">
                         <i class="fas fa-envelope" style="color: var(--primary-green); margin-right: 10px;"></i>
