--- a/locations/palmdale/index.html
+++ b/locations/palmdale/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tree Services in Palmdale, CA | AV Tree Pros</title>
+    <title>Window Tinting Services in Palmdale, CA | AV Window Tinting</title>
     <meta name="description"
-        content="Top-rated tree services in Palmdale, CA. Professional tree trimming, safe removal, and palm skinning for West and East Palmdale. Call (661) 498-4444.">
+        content="Top-rated window tinting in Palmdale, CA. Professional tree trimming, safe removal, and palm skinning for West and East Palmdale. Call (661) 555-TINT.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <a href="/" class="logo">AV Tree <span>Pros</span></a>
+            <a href="/" class="logo">AV Window <span>Tinting</span></a>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/">Home</a></li>
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
             <div class="header-actions">
-                <a href="tel:6614984444" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 498-4444</a>
+                <a href="tel:6615558468" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 555-TINT</a>
                 <a href="/contact/" class="btn btn-primary">Get a Quote</a>
                 <button class="mobile-menu-btn" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             </div>
@@ -46,7 +46,7 @@
     <!-- 1. Hero / Introduction -->
     <section class="hero" id="home">
         <div class="container">
-            <h1>Professional Tree Services in Palmdale, CA</h1>
+            <h1>Professional Window Tinting Services in Palmdale, CA</h1>
             <p>Your trusted local tree service specialists serving West Palmdale, East Palmdale, and all surrounding
                 neighborhoods. From structural trimming to emergency removals—we keep Palmdale trees healthy and safe.
             </p>
@@ -60,7 +60,7 @@
     <section class="features">
         <div class="container">
             <div class="section-title">
-                <h2>Why Palmdale Homeowners Choose AV Tree Pros</h2>
+                <h2>Why Palmdale Homeowners Choose AV Window Tinting</h2>
                 <p>Local expertise combined with professional results for every Palmdale neighborhood.</p>
             </div>
             <div class="features-grid grid-balance-4">
@@ -227,7 +227,7 @@
     <section class="av-palmdale-testimonials">
         <h2>Palmdale Reviews</h2>
         <p class="av-palmdale-intro">
-            What your neighbors are saying about AV Tree Pros.
+            What your neighbors are saying about AV Window Tinting.
         </p>
 
         <div class="av-palmdale-review-viewport">
@@ -303,7 +303,7 @@
         </div>
 
         <div class="av-palmdale-review-cta">
-            <a href="tel:6614984444">Get a Free Quote</a>
+            <a href="tel:6615558468">Get a Free Quote</a>
         </div>
     </section>
 
@@ -311,23 +311,23 @@
     <footer class="aw-footer">
         <div class="container aw-footer-inner">
             <div class="aw-footer-brand">
-                <h3>AV Tree <span>Pros</span></h3>
+                <h3>AV Window <span>Tinting</span></h3>
                 <p>Your trusted local tree service partner in the Antelope Valley.</p>
             </div>
             <div class="aw-footer-contact">
                 <p class="aw-footer-phone">
                     <span>📞</span>
-                    <a href="tel:6614984444">(661) 498-4444</a>
+                    <a href="tel:6615558468">(661) 555-TINT</a>
                 </p>
                 <p class="aw-footer-email">
-                    Professional tree services for Palmdale, Lancaster & the High Desert
+                    Professional window tinting for Palmdale, Lancaster & the High Desert
                 </p>
             </div>
             <div class="aw-footer-services">
                 <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/tree-care/">Professional Tree Care</a></li>
-                    <li><a href="/services/emergency-service/">Emergency Tree Services</a></li>
+                    <li><a href="/services/emergency-service/">Emergency Window Tinting Services</a></li>
                     <li><a href="/services/palm-trimming/">Palm Tree Trimming</a></li>
                     <li><a href="/services/stump-grinding/">Stump Grinding</a></li>
                     <li><a href="/services/tree-trimming/">Tree Trimming</a></li>
@@ -347,7 +347,7 @@
             </div>
         </div>
         <div class="aw-footer-bottom">
-            <p>© <span id="year"></span> AV Tree Pros. All rights reserved.</p>
+            <p>© <span id="year"></span> AV Window Tinting. All rights reserved.</p>
         </div>
     </footer>
 
