Fix localhost navigation: Update all links to use index.html for Python http.server compatibility

--- a/about/index.html
+++ b/about/index.html
@@ -51,14 +51,14 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/services/">Services</a></li>
-                    <li><a href="/about/" class="active">About Us</a></li>
-                    <li><a href="/contact/">Contact</a></li>
+                    <li><a href="/services/index.html">Services</a></li>
+                    <li><a href="/about/index.html" class="active">About Us</a></li>
+                    <li><a href="/contact/index.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
                 <a href="tel:6615558468" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 555-TINT</a>
-                <a href="/contact/" class="btn btn-primary">Get a Quote</a>
+                <a href="/contact/index.html" class="btn btn-primary">Get a Quote</a>
                 <button class="mobile-menu-btn" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             </div>
         </div>
@@ -253,7 +253,7 @@
                 Space?</h2>
             <p style="font-size: 1.2rem; margin-bottom: 40px; opacity: 0.9;">Schedule your complimentary consultation
                 today.</p>
-            <a href="/contact/" class="btn btn-secondary" style="padding: 15px 40px; font-size: 1.1rem;">Get
+            <a href="/contact/index.html" class="btn btn-secondary" style="padding: 15px 40px; font-size: 1.1rem;">Get
                 Your
                 Quote</a>
         </div>
@@ -297,12 +297,12 @@
             <div class="aw-footer-locations">
                 <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/palmdale/">Palmdale, CA</a></li>
-                    <li><a href="/locations/lancaster/">Lancaster, CA</a></li>
-                    <li><a href="/locations/quartz-hill/">Quartz Hill</a></li>
-                    <li><a href="/locations/rosamond/">Rosamond</a></li>
-                    <li><a href="/locations/lake-los-angeles/">Lake Los Angeles</a></li>
-                    <li><a href="/locations/littlerock/">Littlerock</a></li>
+                    <li><a href="/locations/palmdale/index.html">Palmdale, CA</a></li>
+                    <li><a href="/locations/lancaster/index.html">Lancaster, CA</a></li>
+                    <li><a href="/locations/quartz-hill/index.html">Quartz Hill</a></li>
+                    <li><a href="/locations/rosamond/index.html">Rosamond</a></li>
+                    <li><a href="/locations/lake-los-angeles/index.html">Lake Los Angeles</a></li>
+                    <li><a href="/locations/littlerock/index.html">Littlerock</a></li>
                 </ul>
             </div>
 
