--- a/locations/lancaster/index.html
+++ b/locations/lancaster/index.html
@@ -30,14 +30,14 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/services/">Services</a></li>
-                    <li><a href="/about/">About Us</a></li>
-                    <li><a href="/contact/">Contact</a></li>
+                    <li><a href="/services/index.html">Services</a></li>
+                    <li><a href="/about/index.html">About Us</a></li>
+                    <li><a href="/contact/index.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
                 <a href="tel:6615558468" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 555-TINT</a>
-                <a href="/contact/" class="btn btn-primary">Get a Quote</a>
+                <a href="/contact/index.html" class="btn btn-primary">Get a Quote</a>
                 <button class="mobile-menu-btn" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 neighborhoods. From structural trimming to emergency removals—we keep Lancaster trees healthy and safe.
             </p>
             <div class="hero-btns">
-                <a href="/contact/" class="btn btn-primary">Get a Free Estimate</a>
+                <a href="/contact/index.html" class="btn btn-primary">Get a Free Estimate</a>
             </div>
         </div>
     </section>
@@ -337,12 +337,12 @@
             <div class="aw-footer-locations">
                 <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/palmdale/">Palmdale, CA</a></li>
-                    <li><a href="/locations/lancaster/">Lancaster, CA</a></li>
-                    <li><a href="/locations/quartz-hill/">Quartz Hill</a></li>
-                    <li><a href="/locations/rosamond/">Rosamond</a></li>
-                    <li><a href="/locations/lake-los-angeles/">Lake Los Angeles</a></li>
-                    <li><a href="/locations/littlerock/">Littlerock</a></li>
+                    <li><a href="/locations/palmdale/index.html">Palmdale, CA</a></li>
+                    <li><a href="/locations/lancaster/index.html">Lancaster, CA</a></li>
+                    <li><a href="/locations/quartz-hill/index.html">Quartz Hill</a></li>
+                    <li><a href="/locations/rosamond/index.html">Rosamond</a></li>
+                    <li><a href="/locations/lake-los-angeles/index.html">Lake Los Angeles</a></li>
+                    <li><a href="/locations/littlerock/index.html">Littlerock</a></li>
                 </ul>
             </div>
         </div>
