--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/" class="active">Home</a></li>
-                    <li><a href="/services/">Services</a></li>
-                    <li><a href="/about/">About Us</a></li>
-                    <li><a href="/contact/">Contact</a></li>
+                    <li><a href="/services/index.html">Services</a></li>
+                    <li><a href="/about/index.html">About Us</a></li>
+                    <li><a href="/contact/index.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
                 <a href="tel:6615558468" class="phone-link mobile-hide"><i class="fas fa-phone"></i> (661) 555-TINT</a>
-                <a href="/contact/" class="btn btn-primary">Get a Quote</a>
+                <a href="/contact/index.html" class="btn btn-primary">Get a Quote</a>
                 <button class="mobile-menu-btn" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <p>Expert residential, commercial, and automotive window tinting. Trusted by homeowners and businesses in
                 Palmdale and Lancaster for professional results and lifetime warranties.</p>
             <div class="hero-btns">
-                <a href="/contact/" class="btn btn-primary">Get a Free Estimate</a>
+                <a href="/contact/index.html" class="btn btn-primary">Get a Free Estimate</a>
                 <a href="#services" class="btn btn-secondary">Our Services</a>
             </div>
         </div>
@@ -191,7 +191,7 @@
 
             </div>
             <div style="text-align: center; margin-top: 50px;">
-                <a href="/services/" class="btn btn-primary" style="padding: 16px 50px;">View All Service Details</a>
+                <a href="/services/index.html" class="btn btn-primary" style="padding: 16px 50px;">View All Service Details</a>
             </div>
         </div>
     </section>
@@ -565,12 +565,12 @@
             <div class="aw-footer-locations">
                 <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/palmdale/">Palmdale, CA</a></li>
-                    <li><a href="/locations/lancaster/">Lancaster, CA</a></li>
-                    <li><a href="/locations/quartz-hill/">Quartz Hill</a></li>
-                    <li><a href="/locations/rosamond/">Rosamond</a></li>
-                    <li><a href="/locations/lake-los-angeles/">Lake Los Angeles</a></li>
-                    <li><a href="/locations/littlerock/">Littlerock</a></li>
+                    <li><a href="/locations/palmdale/index.html">Palmdale, CA</a></li>
+                    <li><a href="/locations/lancaster/index.html">Lancaster, CA</a></li>
+                    <li><a href="/locations/quartz-hill/index.html">Quartz Hill</a></li>
+                    <li><a href="/locations/rosamond/index.html">Rosamond</a></li>
+                    <li><a href="/locations/lake-los-angeles/index.html">Lake Los Angeles</a></li>
+                    <li><a href="/locations/littlerock/index.html">Littlerock</a></li>
                 </ul>
             </div>
 
