Update About page: blue hero, window tinting content, updated testimonials

--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About AV Window Tinting | Expert Tree Care in Antelope Valley</title>
+    <title>About AV Window Tinting | Expert Window Tinting in Antelope Valley</title>
     <meta name="description"
-        content="AV Window Tinting provides trusted window tinting in Lancaster, Palmdale, and Quartz Hill. Specialized in tree removal, trimming, stump grinding, and palm skinning.">
+        content="AV Window Tinting provides trusted window tinting services in Lancaster, Palmdale, and Quartz Hill. Specialized in residential, commercial, and automotive window film installation.">
 
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -66,25 +66,27 @@
 
     <!-- Page Hero - Enhanced -->
     <section class="hero page-hero"
-        style="min-height: 500px; display: flex; align-items: center; background: linear-gradient(rgba(0, 80, 40, 0.8), rgba(0, 50, 20, 0.8)), url('/images/about-tree-feature.png');">
+        style="min-height: 500px; display: flex; align-items: center; background: linear-gradient(135deg, rgba(30, 58, 138, 0.9), rgba(6, 182, 212, 0.85)), url('/images/hero-home.webp'); background-size: cover; background-position: center;">
         <div class="container">
             <span
-                style="color: var(--accent-yellow); font-weight: 700; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 10px; display: block;">Established
-                2013</span>
-            <h1 style="font-size: 4rem; margin-bottom: 20px;">Dedicated to Safety & Health</h1>
-            <p style="font-size: 1.3rem; max-width: 600px; margin: 0 auto; opacity: 0.9;">Professional tree care in the
-                Antelope Valley. We protect your property and enhance your landscape's value.</p>
+                style="color: var(--accent-cyan); font-weight: 700; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 10px; display: block;">Established
+                2015</span>
+            <h1 style="font-size: 4rem; margin-bottom: 20px;">Dedicated to Comfort & Protection</h1>
+            <p style="font-size: 1.3rem; max-width: 600px; margin: 0 auto; opacity: 0.9;">Professional window tinting in
+                the
+                Antelope Valley. We protect your property and enhance your comfort with premium films.</p>
         </div>
     </section>
 
     <!-- Our Philosophy (New) -->
     <section class="philosophy-section">
         <div class="container philosophy-content">
-            <i class="fas fa-tree philosophy-bg-icon"></i>
-            <p class="philosophy-quote">"True workmanship is about safety and precision. We treat every tree with the
-                respect it deserves and every property as if it were our own."</p>
+            <i class="fas fa-shield-alt philosophy-bg-icon"></i>
+            <p class="philosophy-quote">"True craftsmanship is about precision and protection. We treat every window
+                with the
+                care it deserves and every property as if it were our own."</p>
             <div class="philosophy-divider"></div>
-            <p class="philosophy-sub">Serving Lancaster, Palmdale, and Quartz Hill with a commitment to arboricultural
+            <p class="philosophy-sub">Serving Lancaster, Palmdale, and Quartz Hill with a commitment to professional
                 excellence.</p>
         </div>
     </section>
@@ -99,7 +101,7 @@
                 </div>
                 <div class="stat-item">
                     <span class="stat-number" data-count="2500">2,500+</span>
-                    <span class="stat-label">Trees Serviced</span>
+                    <span class="stat-label">Windows Tinted</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-number">100%</span>
@@ -117,7 +119,8 @@
                     <span class="team-role">The Founder's Story</span>
                     <h3>Rooted in Reliability</h3>
                     <p style="margin-bottom: 20px; font-size: 1.1rem; line-height: 1.8;">
-                        AV Window Tinting began with a clear mission: to provide the Antelope Valley with a tree service that
+                        AV Window Tinting began with a clear mission: to provide the Antelope Valley with a tree service
+                        that
                         prioritizes safety, professionalism, and tree health. We saw too many properties damaged by
                         amateur work and decided to set a higher standard.
                     </p>
@@ -138,7 +141,8 @@
                     </div>
                 </div>
                 <div class="team-image-wrapper">
-                    <img src="/images/brian-uniform.png" alt="Brian Smith - Founder of AV Window Tinting" class="team-img">
+                    <img src="/images/brian-uniform.png" alt="Brian Smith - Founder of AV Window Tinting"
+                        class="team-img">
                 </div>
             </div>
         </div>
@@ -148,7 +152,7 @@
     <section class="process-section">
         <div class="container">
             <div class="section-title">
-                <h2>The AV Window Tinting Process</h2>
+                <h2>Our Installation Process</h2>
                 <p style="margin-top: 10px; color: var(--text-light);">Professional execution from start to finish.</p>
             </div>
 
@@ -156,8 +160,8 @@
                 <div class="process-step">
                     <span class="step-number">1</span>
                     <div class="step-icon"><i class="fas fa-clipboard-check"></i></div>
-                    <h4 class="step-title">Assessment</h4>
-                    <p class="step-desc">We evaluate tree health and safety risks on your property.</p>
+                    <h4 class="step-title">Consultation</h4>
+                    <p class="step-desc">We assess your needs and recommend the best film options for your windows.</p>
                 </div>
                 <div class="process-step">
                     <span class="step-number">2</span>
@@ -173,9 +177,9 @@
                 </div>
                 <div class="process-step">
                     <span class="step-number">4</span>
-                    <div class="step-icon"><i class="fas fa-broom"></i></div>
-                    <h4 class="step-title">Cleanup</h4>
-                    <p class="step-desc">We chip the brush and leave your yard spotless.</p>
+                    <div class="step-icon"><i class="fas fa-check-circle"></i></div>
+                    <h4 class="step-title">Inspection</h4>
+                    <p class="step-desc">We inspect the installation and ensure your complete satisfaction.</p>
                 </div>
             </div>
         </div>
@@ -189,8 +193,8 @@
             </div>
             <div class="testimonial-grid-luxury">
                 <div class="testimonial-luxury-card">
-                    <div class="t-quote">"They removed a massive pine tree that was threatening our roof. The crane work
-                        was impressive, and they didn't damage a single rose bush."</div>
+                    <div class="t-quote">"They tinted all our home windows and the difference is amazing. Our house
+                        stays cool even in summer heat, and the glare is completely gone."</div>
                     <div class="t-author">
                         <div class="t-avatar">JP</div>
                         <div class="t-info">
@@ -200,8 +204,9 @@
                     </div>
                 </div>
                 <div class="testimonial-luxury-card">
-                    <div class="t-quote">"Professional from start to finish. The team arrived on time, uniform and
-                        polite. My palm trees look perfect now."</div>
+                    <div class="t-quote">"Professional from start to finish. The installer arrived on time, was
+                        courteous, and
+                        my car windows look perfect. Best tint job I've ever had!"</div>
                     <div class="t-author">
                         <div class="t-avatar">MS</div>
                         <div class="t-info">
@@ -211,8 +216,8 @@
                     </div>
                 </div>
                 <div class="testimonial-luxury-card">
-                    <div class="t-quote">"Best tree service in the AV. They trimmed our oaks beautifully and cleaned up
-                        everything afterwards. Highly recommended!"</div>
+                    <div class="t-quote">"Best window tinting in the AV. They did our office building and the results
+                        are fantastic. Energy bills are down and employees are more comfortable!"</div>
                     <div class="t-author">
                         <div class="t-avatar">RL</div>
                         <div class="t-info">
