Fix Founder's Story section: update from tree service to window tinting

--- a/about/index.html
+++ b/about/index.html
@@ -117,27 +117,31 @@
             <div class="team-grid">
                 <div class="team-content">
                     <span class="team-role">The Founder's Story</span>
-                    <h3>Rooted in Reliability</h3>
+                    <h3>Built on Quality & Trust</h3>
                     <p style="margin-bottom: 20px; font-size: 1.1rem; line-height: 1.8;">
-                        AV Window Tinting began with a clear mission: to provide the Antelope Valley with a tree service
-                        that
-                        prioritizes safety, professionalism, and tree health. We saw too many properties damaged by
-                        amateur work and decided to set a higher standard.
+                        AV Window Tinting began with a clear mission: to provide the Antelope Valley with window tinting
+                        services
+                        that prioritize quality, professionalism, and customer satisfaction. We saw too many properties
+                        with poor installations
+                        and decided to set a higher standard.
                     </p>
                     <p style="margin-bottom: 20px; color: var(--text-light);">
-                        We've grown into the region's premier choice for complex removals and structural trimming. We
-                        understand the High Desert winds and soil conditions, ensuring your trees are prepped to
-                        withstand the elements.
+                        We've grown into the region's premier choice for residential, commercial, and automotive window
+                        tinting. We
+                        understand the High Desert's intense heat and sun, ensuring your windows provide maximum comfort
+                        and
+                        protection year-round.
                     </p>
                     <p style="color: var(--text-light);">
-                        Our team is trained, equipped, and safety-focused. From the initial assessment to the final
-                        cleanup, we handle your trees with expert care.
+                        Our team is certified, equipped, and detail-focused. From the initial consultation to the final
+                        inspection, we handle your windows with expert care.
                     </p>
                     <div style="margin-top: 30px;">
                         <img src="/images/signature.png" alt="Founder Signature"
                             style="height: 50px; opacity: 0.6; display: none;"> <!-- Placeholder for signature -->
-                        <p style="font-weight: 700; color: var(--primary-dark);">Brian Smith <span
-                                style="font-weight: 400; color: var(--text-light);">— Lead Arborist & Founder</span></p>
+                        <p style="font-weight: 700; color: var(--primary-dark);">Brian <span
+                                style="font-weight: 400; color: var(--text-light);">— Certified Installer &
+                                Founder</span></p>
                     </div>
                 </div>
                 <div class="team-image-wrapper">
