Update Contact page: fix email to avwindowtinting.com, update icon colors to blue, improve mobile responsiveness

--- a/contact/index.html
+++ b/contact/index.html
@@ -52,7 +52,7 @@
     <!-- Contact Content -->
     <section class="features">
         <div class="container">
-            <div class="features-grid" style="grid-template-columns: 1fr 1fr;">
+            <div class="features-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
                 <!-- Contact Info -->
                 <div class="feature-card" style="text-align: left;">
                     <h2 style="margin-bottom: 20px;">Get a Quote</h2>
@@ -60,12 +60,12 @@
                         schedule a service.</p>
 
                     <div style="margin-bottom: 15px;">
-                        <i class="fas fa-phone-alt" style="color: var(--primary-green); margin-right: 10px;"></i>
+                        <i class="fas fa-phone-alt" style="color: var(--primary-blue); margin-right: 10px;"></i>
                         <strong style="font-size: 1.2rem;">(661) 555-TINT</strong>
                     </div>
                     <div style="margin-bottom: 15px;">
-                        <i class="fas fa-envelope" style="color: var(--primary-green); margin-right: 10px;"></i>
-                        <span>info@avtreepros.com</span>
+                        <i class="fas fa-envelope" style="color: var(--primary-blue); margin-right: 10px;"></i>
+                        <span>info@avwindowtinting.com</span>
                     </div>
                 </div>
 
